# DeepLearning-Project

./: main.py  model.py  pyproject.toml
data/: test.csv  train.csv
