[tool.poetry]
name = "repl-nix-deeplearning-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_deeplearning_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
gensim = "^4.3.2"
keras = "^3.3.3"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
